--- a/public/sharper_image_salon.css
+++ b/public/sharper_image_salon.css
@@ -320,7 +320,7 @@ img.about-scissors {
 #inspiration-div {
     background-image: url("/man.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: top;
     width: 100%;
     height: 600px;
@@ -340,7 +340,6 @@ img.about-scissors {
     display: flex;
     justify-content: space-around;
     align-content: center;
-    width: 98%;
     height: 300px;
     background-color: black;
     overflow: hidden;
