--- a/public/sharper_image_salon.css
+++ b/public/sharper_image_salon.css
@@ -14,7 +14,7 @@ main {
 #aboutus-div {
     height: 700px;
     width: 100%;
-    background-image: url("/blackhair.jpg");
+    background-image: url("/images/blackhair.jpg");
     background-size: cover;
 }
 
@@ -71,7 +71,7 @@ img.about-scissors {
 }
 
 #olderwoman {
-    background-image: url("/women-old.jpg");
+    background-image: url("/images/women-old.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left top;
@@ -138,7 +138,7 @@ img.about-scissors {
     float: right;
     width: 88%;
     min-height: calc(100vh - 130px);
-    background-image: url("/hairtools.jpg");
+    background-image: url("/images/hairtools.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top right;
@@ -173,7 +173,7 @@ img.about-scissors {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
-    background-image: url("/redhead.jpg");
+    background-image: url("/images/redhead.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     display: inline-block;
@@ -228,7 +228,7 @@ img.about-scissors {
     display: inline-block;
     width: 100%;
     height: 600px;
-    background-image: url("/littlegirl.jpg");
+    background-image: url("/images/littlegirl.jpg");
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -275,7 +275,7 @@ img.about-scissors {
     width: 100%;
     height: 580px;
     font-family: "Domine";
-    background-image: url("/hairdresstools.jpg");
+    background-image: url("/images/hairdresstools.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -321,7 +321,7 @@ img.about-scissors {
 
 /*inspiration page*/
 #inspiration-div {
-    background-image: url("/man.jpg");
+    background-image: url("/images/man.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
